.antlr/babyduckParser.java
// Generated from /Users/brt/Documents/parser/XDD/babyduck.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class babyduckParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Program=1, Main=2, End=3, Var=4, Void=5, Print=6, While=7, Do=8, If=9, 
		Else=10, Int=11, Float=12, Identifier=13, Plus=14, Minus=15, Star=16, 
		Div=17, Assign=18, NotEqual=19, Greater=20, Less=21, LeftParen=22, RightParen=23, 
		LeftBracket=24, RightBracket=25, LeftBrace=26, RightBrace=27, Comma=28, 
		Colon=29, Semi=30, CteString=31, CteInt=32, CteFloat=33, Whitespace=34, 
		Newline=35;
	public static final int
		RULE_programa = 0, RULE_vars = 1, RULE_commaSeparatedId = 2, RULE_funcs = 3, 
		RULE_idTypeSequence = 4, RULE_body = 5, RULE_type = 6, RULE_statement = 7, 
		RULE_assign = 8, RULE_condition = 9, RULE_cycle = 10, RULE_f_call = 11, 
		RULE_commaSeparatedExpression = 12, RULE_print = 13, RULE_printSequence = 14, 
		RULE_expression = 15, RULE_exp = 16, RULE_termino = 17, RULE_factor = 18, 
		RULE_factorSequence = 19, RULE_cte = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "vars", "commaSeparatedId", "funcs", "idTypeSequence", "body", 
			"type", "statement", "assign", "condition", "cycle", "f_call", "commaSeparatedExpression", 
			"print", "printSequence", "expression", "exp", "termino", "factor", "factorSequence", 
			"cte"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'main'", "'end'", "'var'", "'void'", "'print'", "'while'", 
			"'do'", "'if'", "'else'", "'int'", "'float'", null, "'+'", "'-'", "'*'", 
			"'/'", "'='", "'!='", "'>'", "'<'", "'('", "')'", "'['", "']'", "'{'", 
			"'}'", "','", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Program", "Main", "End", "Var", "Void", "Print", "While", "Do", 
			"If", "Else", "Int", "Float", "Identifier", "Plus", "Minus", "Star", 
			"Div", "Assign", "NotEqual", "Greater", "Less", "LeftParen", "RightParen", 
			"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Comma", "Colon", 
			"Semi", "CteString", "CteInt", "CteFloat", "Whitespace", "Newline"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "babyduck.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public babyduckParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode Program() { return getToken(babyduckParser.Program, 0); }
		public TerminalNode Identifier() { return getToken(babyduckParser.Identifier, 0); }
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public TerminalNode Main() { return getToken(babyduckParser.Main, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode End() { return getToken(babyduckParser.End, 0); }
		public List<VarsContext> vars() {
			return getRuleContexts(VarsContext.class);
		}
		public VarsContext vars(int i) {
			return getRuleContext(VarsContext.class,i);
		}
		public List<FuncsContext> funcs() {
			return getRuleContexts(FuncsContext.class);
		}
		public FuncsContext funcs(int i) {
			return getRuleContext(FuncsContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(Program);
			setState(43);
			match(Identifier);
			setState(44);
			match(Semi);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Var) {
				{
				{
				setState(45);
				vars();
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Void) {
				{
				{
				setState(51);
				funcs();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(Main);
			setState(58);
			body();
			setState(59);
			match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarsContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(babyduckParser.Var, 0); }
		public List<CommaSeparatedIdContext> commaSeparatedId() {
			return getRuleContexts(CommaSeparatedIdContext.class);
		}
		public CommaSeparatedIdContext commaSeparatedId(int i) {
			return getRuleContext(CommaSeparatedIdContext.class,i);
		}
		public List<TerminalNode> Colon() { return getTokens(babyduckParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(babyduckParser.Colon, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> Semi() { return getTokens(babyduckParser.Semi); }
		public TerminalNode Semi(int i) {
			return getToken(babyduckParser.Semi, i);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(Var);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				commaSeparatedId();
				setState(63);
				match(Colon);
				setState(64);
				type();
				setState(65);
				match(Semi);
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommaSeparatedIdContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(babyduckParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(babyduckParser.Identifier, i);
		}
		public List<TerminalNode> Comma() { return getTokens(babyduckParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(babyduckParser.Comma, i);
		}
		public CommaSeparatedIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaSeparatedId; }
	}

	public final CommaSeparatedIdContext commaSeparatedId() throws RecognitionException {
		CommaSeparatedIdContext _localctx = new CommaSeparatedIdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_commaSeparatedId);
		try {
			int _alt;
			setState(79);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(Identifier);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(72);
						match(Identifier);
						setState(73);
						match(Comma);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(76); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(78);
				match(Identifier);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncsContext extends ParserRuleContext {
		public TerminalNode Void() { return getToken(babyduckParser.Void, 0); }
		public TerminalNode Identifier() { return getToken(babyduckParser.Identifier, 0); }
		public TerminalNode LeftParen() { return getToken(babyduckParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(babyduckParser.RightParen, 0); }
		public TerminalNode LeftBracket() { return getToken(babyduckParser.LeftBracket, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode RightBracket() { return getToken(babyduckParser.RightBracket, 0); }
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public IdTypeSequenceContext idTypeSequence() {
			return getRuleContext(IdTypeSequenceContext.class,0);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public FuncsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcs; }
	}

	public final FuncsContext funcs() throws RecognitionException {
		FuncsContext _localctx = new FuncsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(Void);
			setState(82);
			match(Identifier);
			setState(83);
			match(LeftParen);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(84);
				idTypeSequence();
				}
			}

			setState(87);
			match(RightParen);
			setState(88);
			match(LeftBracket);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Var) {
				{
				setState(89);
				vars();
				}
			}

			setState(92);
			body();
			setState(93);
			match(RightBracket);
			setState(94);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdTypeSequenceContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(babyduckParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(babyduckParser.Identifier, i);
		}
		public List<TerminalNode> Colon() { return getTokens(babyduckParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(babyduckParser.Colon, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(babyduckParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(babyduckParser.Comma, i);
		}
		public IdTypeSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idTypeSequence; }
	}

	public final IdTypeSequenceContext idTypeSequence() throws RecognitionException {
		IdTypeSequenceContext _localctx = new IdTypeSequenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_idTypeSequence);
		try {
			int _alt;
			setState(112);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(Identifier);
				setState(97);
				match(Colon);
				setState(98);
				type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(99);
						match(Identifier);
						setState(100);
						match(Colon);
						setState(101);
						type();
						setState(102);
						match(Comma);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(106); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(108);
				match(Identifier);
				setState(109);
				match(Colon);
				setState(110);
				type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public TerminalNode LeftBrace() { return getToken(babyduckParser.LeftBrace, 0); }
		public TerminalNode RightBrace() { return getToken(babyduckParser.RightBrace, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(LeftBrace);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8896L) != 0)) {
				{
				{
				setState(115);
				statement();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(babyduckParser.Int, 0); }
		public TerminalNode Float() { return getToken(babyduckParser.Float, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==Int || _la==Float) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public CycleContext cycle() {
			return getRuleContext(CycleContext.class,0);
		}
		public F_callContext f_call() {
			return getRuleContext(F_callContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				assign();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				condition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(127);
				cycle();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				f_call();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				print();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(babyduckParser.Identifier, 0); }
		public TerminalNode Assign() { return getToken(babyduckParser.Assign, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(Identifier);
			setState(133);
			match(Assign);
			setState(134);
			expression();
			setState(135);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionContext extends ParserRuleContext {
		public TerminalNode If() { return getToken(babyduckParser.If, 0); }
		public TerminalNode LeftParen() { return getToken(babyduckParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(babyduckParser.RightParen, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public TerminalNode Else() { return getToken(babyduckParser.Else, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(If);
			setState(138);
			match(LeftParen);
			setState(139);
			expression();
			setState(140);
			match(RightParen);
			setState(141);
			body();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Else) {
				{
				setState(142);
				match(Else);
				setState(143);
				body();
				}
			}

			setState(146);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CycleContext extends ParserRuleContext {
		public TerminalNode While() { return getToken(babyduckParser.While, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode Do() { return getToken(babyduckParser.Do, 0); }
		public TerminalNode LeftParen() { return getToken(babyduckParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(babyduckParser.RightParen, 0); }
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public CycleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cycle; }
	}

	public final CycleContext cycle() throws RecognitionException {
		CycleContext _localctx = new CycleContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cycle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(While);
			setState(149);
			body();
			setState(150);
			match(Do);
			setState(151);
			match(LeftParen);
			setState(152);
			expression();
			setState(153);
			match(RightParen);
			setState(154);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class F_callContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(babyduckParser.Identifier, 0); }
		public TerminalNode LeftParen() { return getToken(babyduckParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(babyduckParser.RightParen, 0); }
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public CommaSeparatedExpressionContext commaSeparatedExpression() {
			return getRuleContext(CommaSeparatedExpressionContext.class,0);
		}
		public F_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_f_call; }
	}

	public final F_callContext f_call() throws RecognitionException {
		F_callContext _localctx = new F_callContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_f_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(Identifier);
			setState(157);
			match(LeftParen);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 12889153536L) != 0)) {
				{
				setState(158);
				commaSeparatedExpression();
				}
			}

			setState(161);
			match(RightParen);
			setState(162);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommaSeparatedExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Comma() { return getToken(babyduckParser.Comma, 0); }
		public CommaSeparatedExpressionContext commaSeparatedExpression() {
			return getRuleContext(CommaSeparatedExpressionContext.class,0);
		}
		public CommaSeparatedExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commaSeparatedExpression; }
	}

	public final CommaSeparatedExpressionContext commaSeparatedExpression() throws RecognitionException {
		CommaSeparatedExpressionContext _localctx = new CommaSeparatedExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_commaSeparatedExpression);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(164);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				expression();
				setState(166);
				match(Comma);
				setState(167);
				commaSeparatedExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintContext extends ParserRuleContext {
		public TerminalNode Print() { return getToken(babyduckParser.Print, 0); }
		public TerminalNode LeftParen() { return getToken(babyduckParser.LeftParen, 0); }
		public PrintSequenceContext printSequence() {
			return getRuleContext(PrintSequenceContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(babyduckParser.RightParen, 0); }
		public TerminalNode Semi() { return getToken(babyduckParser.Semi, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(Print);
			setState(172);
			match(LeftParen);
			setState(173);
			printSequence();
			setState(174);
			match(RightParen);
			setState(175);
			match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintSequenceContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CteString() { return getToken(babyduckParser.CteString, 0); }
		public TerminalNode Comma() { return getToken(babyduckParser.Comma, 0); }
		public PrintSequenceContext printSequence() {
			return getRuleContext(PrintSequenceContext.class,0);
		}
		public PrintSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printSequence; }
	}

	public final PrintSequenceContext printSequence() throws RecognitionException {
		PrintSequenceContext _localctx = new PrintSequenceContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_printSequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
			case Plus:
			case Minus:
			case LeftParen:
			case CteInt:
			case CteFloat:
				{
				setState(177);
				expression();
				}
				break;
			case CteString:
				{
				setState(178);
				match(CteString);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(181);
				match(Comma);
				setState(182);
				printSequence();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode Greater() { return getToken(babyduckParser.Greater, 0); }
		public TerminalNode Less() { return getToken(babyduckParser.Less, 0); }
		public TerminalNode NotEqual() { return getToken(babyduckParser.NotEqual, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}
